--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.9",
     "react": "^18.2.0",
