--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "dotenv": "^16.3.1",
+    "path-browserify": "^1.0.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.0.9",
     "react": "^18.2.0",
